--- a/QuizWebApp/Web.config
+++ b/QuizWebApp/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
       <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
@@ -13,6 +13,7 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="QuizWebAppDb" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=QuizWebAppDb;Integrated Security=SSPI;" />
@@ -26,16 +27,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="TimeZone" value="Tokyo Standard Time" />
     <add key="SaltOfUserID" value="0000" />
-<!--
+    <!--　★
     <add key="ExternalAuthentication" value="true"/>
-    <add key="QuizMaster" value="{idProviderName:'****', name:'****'}"/>
+    <add key="QuizMaster" value="{idProviderName:'local', name:'mayu'}"/>
+    -->
+    <add key="QuizMaster" value="{idProviderName:'local', name:'mayu'}"/>
+    <!--　
     <add key="OAuth.Twitter" value="{consumerKey:'****', consumerSecret:'****'}" />
     <add key="OAuth.facebook" value="{appId:'****', appSecret:'****'}" />
     <add key="OAuth.Microsoft" value="{clientId:'****', clientSecret:'****'}" />
     <add key="OAuth.GitHub" value="{clientId:'****', clientSecret:'****'}" />
--->
+     -->
   </appSettings>
-
   <!--
     .NET 4.5 対応のための web.config の変更点の説明については、http://go.microsoft.com/fwlink/?LinkId=235367 を参照してください。
 
@@ -86,7 +89,6 @@
     </assemblyBinding>
      -->
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
         <dependentAssembly>
           <assemblyIdentity name="System.Web.Mvc" culture="neutral" publicKeyToken="31bf3856ad364e35" />
@@ -100,6 +102,10 @@
       <dependentAssembly>
         <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -148,4 +154,10 @@
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
