--- a/QuizWebApp/QuizWebApp.csproj
+++ b/QuizWebApp/QuizWebApp.csproj
@@ -318,6 +318,24 @@
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
+    <Content Include="img\q1.jpg" />
+    <Content Include="img\q10.jpg" />
+    <Content Include="img\q11.gif" />
+    <Content Include="img\q12.jpg" />
+    <Content Include="img\q13.jpg" />
+    <Content Include="img\q15.jpg" />
+    <Content Include="img\q16.jpg" />
+    <Content Include="img\q17.gif" />
+    <Content Include="img\q18.jpg" />
+    <Content Include="img\q19.jpg" />
+    <Content Include="img\q2.jpg" />
+    <Content Include="img\q20.jpg" />
+    <Content Include="img\q4.jpg" />
+    <Content Include="img\q5.jpg" />
+    <Content Include="img\q6.jpg" />
+    <Content Include="img\q7.jpg" />
+    <Content Include="img\q8.jpg" />
+    <Content Include="img\q9.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
