--- a/QuizWebApp/Web.config
+++ b/QuizWebApp/Web.config
@@ -31,7 +31,7 @@
     <add key="ExternalAuthentication" value="true"/>
     <add key="QuizMaster" value="{idProviderName:'local', name:'mayu'}"/>
     -->
-    <add key="QuizMaster" value="{idProviderName:'local', name:'mayu'}"/>
+    <add key="QuizMaster" value="{idProviderName:'local', name:'mayumayu0330'}"/>
     <!--　
     <add key="OAuth.Twitter" value="{consumerKey:'****', consumerSecret:'****'}" />
     <add key="OAuth.facebook" value="{appId:'****', appSecret:'****'}" />
