--- a/QuizWebApp/Web.config
+++ b/QuizWebApp/Web.config
@@ -43,10 +43,13 @@
     .NET 4.5 対応のための web.config の変更点の説明については、http://go.microsoft.com/fwlink/?LinkId=235367 を参照してください。
 
     次の属性を <httpRuntime> タグに設定できます。
+    -->
+    <!-- ★ -->
       <system.Web>
+        <customErrors mode="Off"/>
         <httpRuntime targetFramework="4.5" />
       </system.Web>
-  -->
+  <!-- -->
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
