--- a/QuizWebApp/Web.config
+++ b/QuizWebApp/Web.config
@@ -16,7 +16,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="QuizWebAppDb" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=QuizWebAppDb;Integrated Security=SSPI;" />
+    <add name="QuizWebAppDb" providerName="System.Data.SqlClient" connectionString="Data Source=tcp:dpu72gr1o0.database.windows.net,1433;Initial Catalog=endofyearparty;User ID=kobayama07@dpu72gr1o0;Password=Shuntomo08" />
   </connectionStrings>
   <appSettings file="..\custom.appSettings.config">
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
