--- a/QuizWebApp/Web.config
+++ b/QuizWebApp/Web.config
@@ -16,6 +16,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
+    <!-- ★ AzureのSQL用に変更 -->
     <add name="QuizWebAppDb" providerName="System.Data.SqlClient" connectionString="Data Source=tcp:dpu72gr1o0.database.windows.net,1433;Initial Catalog=endofyearparty;User ID=kobayama07@dpu72gr1o0;Password=Shuntomo08" />
   </connectionStrings>
   <appSettings file="..\custom.appSettings.config">
@@ -31,7 +32,7 @@
     <add key="ExternalAuthentication" value="true"/>
     <add key="QuizMaster" value="{idProviderName:'local', name:'mayu'}"/>
     -->
-    <add key="QuizMaster" value="{idProviderName:'local', name:'mayumayu0330'}"/>
+    <add key="QuizMaster" value="{idProviderName:'local', name:'kobayama07'}"/>
     <!--　
     <add key="OAuth.Twitter" value="{consumerKey:'****', consumerSecret:'****'}" />
     <add key="OAuth.facebook" value="{appId:'****', appSecret:'****'}" />
